# mattors

./: .envrc  .gitignore  .travis.yml  Cargo.toml  README.md  TODO.md  bundle.js  bundle.js.map  index.html  index.scss  index.tsx  package.json  postcss.config.js  tsconfig.json  tslint.json  webpack.config.js
@types/: p5.d.ts  p5_module.d.ts
geo/: Cargo.toml
geo/src/: angle.rs  bbox.rs  convex_hull.rs  delaunay.rs  kdtree.rs  kmeans.rs  lib.rs  line.rs  point.rs  polygon.rs  triangle.rs
geo/src/utils/: ksmallest.rs  mod.rs
mattopy/: Pipfile  buildings.py  join-lines.py  mountains.py  pylintrc  quads.py
mattors/: lib.rs  main.rs
mattors/art/: delaunay.rs  dithering.rs  dragon.rs  fractree.rs  julia.rs  mod.rs  primi.rs  (+8 more)
misc/: Pipfile  fractures.py  quads.py
scripts/: cargo-debug-macro  deploy
sketches/: annulus.ts  astroid.ts  blankets.ts  bloody-spider-web.ts  bw-rain.ts  cairo-tiling.ts  chaikin.ts  circular-maze.ts  clifford-attractors.ts  cubic-disarray.ts  cuts.ts  dla.ts  eyes.ts  focus-eye.ts  galaxy-map.ts  irregular-islands.ts  isolines.ts  light-in-a-cave.ts  neon-lines.ts  noise-quads.ts  nucleus.ts  parallel-bands.ts  penrose-tiling.ts  print10.ts  roses.ts  rots.ts  rough-balls.ts  scribbles.ts  sketch.ts  sorting.ts  space-filling-curves.ts  spiral-christmas-tree.ts  spiral-noise.ts  super-permutations.ts  symmetry.ts  triangular-maze.ts  truchet-tiles.ts  utils.ts  vornoi.ts  walls.ts
src/: delaunay.rs  dragon.rs  drawing.rs  fractree.rs  geo.rs  julia.rs  lib.rs  main.rs  point.rs  primi.rs  quantize.rs  runes.rs  sierpinski.rs  utils.rs
(+32 files in other folders)
