[package]
name = "matto"
version = "0.1.0"
authors = ["daniele <d.dorazio96@gmail.com>"]

[workspace]
members = [
    "geo",
]

[lib]
path = "mattors/lib.rs"

[[bin]]
name = "matto"
path = "mattors/main.rs"

[dependencies]
geo = { path = "./geo" }

image = { git = "https://github.com/PistonDevelopers/image", branch = "master" }
num = "0.2"
rand = "0.5"
structopt = "0.2"

[dev-dependencies]
maplit = "1.0"